header overflow fix

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -49,15 +49,18 @@
   font-weight: 700;
   text-decoration: none;
   color: $white;
+  max-width: 160px;
 
   @media (min-width: $tablet-width) {
     font-size: 24px;
     line-height: 24px;
+    max-width: 180px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 26px;
     line-height: 30px;
+    max-width: 190px;
   }
 
   &:hover {
